--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "antd": "5.10.1",
     "classnames": "^2.5.0",
     "dayjs": "1.11.10",
+    "fs": "^0.0.1-security",
     "lodash": "4.17.21",
     "next": "14.0.4",
+    "path": "^0.12.7",
+    "process": "^0.11.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-family-tree": "3.2.0",
