--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@ant-design/cssinjs": "1.17.2",
     "@prisma/client": "5.4.2",
+    "@types/react-highlight-words": "^0.16.7",
     "antd": "5.10.1",
     "classnames": "^2.5.0",
     "dayjs": "1.11.10",
@@ -24,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-family-tree": "3.2.0",
+    "react-highlight-words": "^0.20.0",
     "uuid": "9.0.0"
   },
   "devDependencies": {
